--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
 <!-- キャッチコピー付き画像 -->
 <div class="hero">
-    <img src="hero-image.jpg" alt="キャッチコピー入りの背景画像">
+    <img src="hero-image.JPG" alt="キャッチコピー入りの背景画像">
     <div class="hero-text">未来を創るデータの力</div>
 </div>
 
