--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 <header>
     <!-- ロゴ -->
     <div class="logo">
-        <img src="logo-image.jpg" alt="企業ロゴ">
+        <img src="logo-image.png" alt="企業ロゴ">
     </div>
     <!-- 問い合わせと言語切り替えボタン -->
     <div class="header-buttons">
