--- a/index.html
+++ b/index.html
@@ -49,13 +49,16 @@
             width: 100%;
             height: 100vh;
             background: url('hero-image.jpg') no-repeat center center/cover;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: flex-start;
+            padding: 20px;
+            box-sizing: border-box;
         }
 
         /* キャッチコピーのスタイル */
         .catchphrase {
-            position: absolute;
-            top: 20px;
-            left: 20px;
             max-width: 600px;
             font-size: 32px; /* フォントサイズを大きく */
             font-weight: bold;
@@ -63,27 +66,25 @@
             text-align: left;
             color: #fff;
             text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7); /* 視認性向上のため影を追加 */
+            margin-bottom: 20px;
         }
 
         /* メニューのスタイル */
         .menu {
             display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            gap: 20px;
-            padding: 20px;
-            background-color: #e6e6e6; /* メニュー背景色を薄いグレーに */
+            flex-direction: column;
+            gap: 10px;
+            width: 100%;
+            max-width: 300px;
         }
         .menu-item {
-            flex: 1 1 calc(25% - 20px); /* 横に最大4つ配置 */
-            max-width: calc(25% - 20px);
             text-align: center;
-            padding: 20px;
+            padding: 15px 20px;
             background-color: #fff;
             border: 1px solid #ccc;
             border-radius: 5px;
             color: #000; /* メニュー文字色を黒に */
-            box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
+            font-size: 18px;
             cursor: pointer;
             transition: transform 0.2s, background-color 0.2s;
         }
@@ -93,14 +94,12 @@
         }
 
         @media screen and (max-width: 768px) {
-            .menu-item {
-                flex: 1 1 calc(50% - 20px); /* 横に最大2つ配置（小画面） */
+            .hero {
+                align-items: center;
+                text-align: center;
             }
-        }
-
-        @media screen and (max-width: 480px) {
-            .menu-item {
-                flex: 1 1 100%; /* 縦に1列（さらに小画面） */
+            .menu {
+                align-items: center;
             }
         }
     </style>
@@ -128,17 +127,16 @@
         オープンデータベース<br>
         構築プロジェクト
     </div>
-</div>
-
-<!-- メニュー -->
-<div class="menu">
-    <div class="menu-item" onclick="location.href='/about'">Starrydataとは</div>
-    <div class="menu-item" onclick="location.href='/data'">データを集める・使う</div>
-    <div class="menu-item" onclick="location.href='/collaboration'">共同研究</div>
-    <div class="menu-item" onclick="location.href='/projects'">プロジェクト</div>
-    <div class="menu-item" onclick="location.href='/papers'">論文紹介</div>
-    <div class="menu-item" onclick="location.href='/topics'">トピックス</div>
-    <div class="menu-item" onclick="location.href='/faq'">FAQ</div>
+    <!-- 縦に並ぶメニューボタン -->
+    <div class="menu">
+        <div class="menu-item" onclick="location.href='/about'">Starrydataとは</div>
+        <div class="menu-item" onclick="location.href='/data'">データを集める・使う</div>
+        <div class="menu-item" onclick="location.href='/collaboration'">共同研究</div>
+        <div class="menu-item" onclick="location.href='/projects'">プロジェクト</div>
+        <div class="menu-item" onclick="location.href='/papers'">論文紹介</div>
+        <div class="menu-item" onclick="location.href='/topics'">トピックス</div>
+        <div class="menu-item" onclick="location.href='/faq'">FAQ</div>
+    </div>
 </div>
 
 <script>
