--- a/index.html
+++ b/index.html
@@ -124,8 +124,7 @@
     <!-- キャッチコピー -->
     <div class="catchphrase">
         無機材料科学実験データの<br>
-        オープンデータベース<br>
-        構築プロジェクト
+        オープンデータベース構築プロジェクト
     </div>
     <!-- 縦に並ぶメニューボタン -->
     <div class="menu">
