--- a/index.html
+++ b/index.html
@@ -118,8 +118,7 @@
     <!-- キャッチコピー -->
     <div class="catchphrase">
         無機材料科学実験データの<br>
-        オープンデータベース<br>
-        構築プロジェクト
+        オープンデータベース構築プロジェクト
     </div>
     <!-- 左揃えのメニュー項目 -->
     <div class="menu">
