--- a/index.html
+++ b/index.html
@@ -77,14 +77,38 @@
             gap: 10px;
         }
         .menu-item {
+            position: relative;
             font-size: 18px; /* フォントサイズ */
             font-weight: bold; /* 太字 */
             color: #000; /* 黒字 */
             cursor: pointer;
-            transition: color 0.2s;
         }
-        .menu-item:hover {
-            color: #555; /* ホバー時の文字色を少し明るく */
+        .menu-item:hover .submenu {
+            display: block; /* 子メニューを表示 */
+        }
+
+        /* サブメニューのスタイル */
+        .submenu {
+            display: none; /* 初期状態で非表示 */
+            position: absolute;
+            top: 100%;
+            left: 0;
+            background-color: #fff;
+            border: 1px solid #ccc;
+            padding: 10px;
+            list-style: none;
+            margin: 0;
+            z-index: 1000;
+        }
+        .submenu li {
+            padding: 5px 10px;
+            font-size: 16px;
+            color: #000;
+            font-weight: normal;
+            cursor: pointer;
+        }
+        .submenu li:hover {
+            background-color: #ddd; /* ホバー時の背景色 */
         }
 
         @media screen and (max-width: 768px) {
@@ -122,8 +146,22 @@
     </div>
     <!-- 左揃えのメニュー項目 -->
     <div class="menu">
-        <div class="menu-item" onclick="location.href='/about'">Starrydataとは</div>
-        <div class="menu-item" onclick="location.href='/data'">データを集める・使う</div>
+        <div class="menu-item">
+            Starrydataとは
+            <ul class="submenu">
+                <li onclick="location.href='/about/project-overview'">プロジェクト概要</li>
+                <li onclick="location.href='/about/project-history'">プロジェクトの歩み</li>
+                <li onclick="location.href='/about/members'">メンバー</li>
+            </ul>
+        </div>
+        <div class="menu-item">
+            データを集める・使う
+            <ul class="submenu">
+                <li onclick="location.href='/data/collecting-data'">データを集める</li>
+                <li onclick="location.href='/data/download'">データセットのダウンロード</li>
+                <li onclick="location.href='/data/python-usage'">Pythonでのデータファイルの使用</li>
+            </ul>
+        </div>
         <div class="menu-item" onclick="location.href='/collaboration'">共同研究</div>
         <div class="menu-item" onclick="location.href='/projects'">プロジェクト</div>
         <div class="menu-item" onclick="location.href='/papers'">論文紹介</div>
