--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             background-color: #e6e6e6; /* 薄いグレー */
             color: #000; /* ヘッダー文字色 */
             position: relative;
+            z-index: 1000; /* トップ画像より上に配置 */
         }
         .logo {
             position: absolute;
@@ -55,15 +56,17 @@
         /* トップ画像セクション */
         .hero {
             width: 100%;
-            height: 400px; /* トップ画像の高さ */
+            height: 600px; /* トップ画像の高さを広げる */
             background: url('hero-image.jpg') no-repeat center center/cover;
+            position: relative;
+            z-index: 1; /* 子メニューより下に表示 */
         }
 
         /* 子メニューエリア */
         .submenu-area {
             display: none; /* 初期状態は非表示 */
             position: absolute;
-            top: 100%;
+            top: 100%; /* メニューバーの下に配置 */
             left: 0;
             width: 100%;
             background-color: #fff; /* 背景白 */
@@ -71,7 +74,7 @@
             padding: 20px;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
             box-sizing: border-box;
-            z-index: 1000;
+            z-index: 10; /* トップ画像より上に配置 */
         }
         .submenu-area.active {
             display: block; /* メニューがクリックされた場合に表示 */
