--- a/index.html
+++ b/index.html
@@ -44,16 +44,10 @@
             font-size: 14px; /* 小さめのフォント */
             color: #000;
             cursor: pointer;
-            position: relative;
+            position: relative; /* 子メニュー配置のため */
         }
         .menu-item:hover {
             text-decoration: underline;
-        }
-        .lang-switch {
-            position: absolute;
-            right: 20px; /* 右端に言語切り替え */
-            font-size: 20px;
-            cursor: pointer;
         }
 
         /* トップ画像セクション */
@@ -72,7 +66,7 @@
             position: absolute;
             top: 60px; /* ヘッダーのすぐ下に配置 */
             left: 0;
-            width: 100%;
+            width: 100%; /* ウィンドウ幅いっぱい */
             background-color: #fff; /* 背景白 */
             color: #000; /* 文字黒 */
             padding: 20px;
@@ -80,8 +74,8 @@
             box-sizing: border-box;
             z-index: 10; /* トップ画像より上に配置 */
         }
-        .submenu-area.active {
-            display: block; /* メニューがクリックされた場合に表示 */
+        .menu-item:hover .submenu-area {
+            display: block; /* カーソルを当てると表示 */
         }
         .submenu {
             display: flex;
@@ -89,11 +83,14 @@
             gap: 10px;
             padding: 0;
             margin: 0;
+            width: 50%; /* 子メニューエリア内で幅を調整 */
+            margin-left: 25%; /* 子メニューエリア全体の中央より少し左に配置 */
         }
         .submenu-item {
             font-size: 14px; /* 子メニューのフォントも小さめ */
             color: #000;
             cursor: pointer;
+            text-align: left;
         }
         .submenu-item:hover {
             text-decoration: underline;
@@ -109,65 +106,49 @@
     </div>
     <!-- ヘッダー内メニュー -->
     <nav class="header-menu">
-        <div class="menu-item" onclick="showSubmenu('submenu1')">Starrydataとは</div>
-        <div class="menu-item" onclick="showSubmenu('submenu2')">データを集める・使う</div>
-        <div class="menu-item" onclick="showSubmenu('submenu3')">共同研究</div>
-        <div class="menu-item" onclick="showSubmenu('submenu4')">プロジェクト</div>
-        <div class="menu-item" onclick="showSubmenu('submenu5')">論文紹介</div>
-        <div class="menu-item" onclick="showSubmenu('submenu6')">トピックス</div>
-        <div class="menu-item" onclick="showSubmenu('submenu7')">FAQ</div>
+        <div class="menu-item">
+            Starrydataとは
+            <div class="submenu-area">
+                <ul class="submenu">
+                    <li class="submenu-item" onclick="location.href='/about/project-overview'">プロジェクト概要</li>
+                    <li class="submenu-item" onclick="location.href='/about/project-history'">プロジェクトの歩み</li>
+                    <li class="submenu-item" onclick="location.href='/about/members'">メンバー</li>
+                </ul>
+            </div>
+        </div>
+        <div class="menu-item">
+            データを集める・使う
+            <div class="submenu-area">
+                <ul class="submenu">
+                    <li class="submenu-item" onclick="location.href='/data/collecting-data'">データを集める</li>
+                    <li class="submenu-item" onclick="location.href='/data/download'">データセットのダウンロード</li>
+                    <li class="submenu-item" onclick="location.href='/data/python-usage'">Pythonでのデータファイルの使用</li>
+                </ul>
+            </div>
+        </div>
+        <div class="menu-item">
+            共同研究
+        </div>
+        <div class="menu-item">
+            プロジェクト
+        </div>
+        <div class="menu-item">
+            論文紹介
+        </div>
+        <div class="menu-item">
+            トピックス
+        </div>
+        <div class="menu-item">
+            FAQ
+        </div>
         <div class="menu-item" onclick="location.href='/contact'">問い合わせ</div>
     </nav>
-    <!-- 言語切り替え -->
-    <div class="lang-switch" onclick="changeLanguage('en')">🇬🇧</div>
 </header>
 
 <!-- トップ画像 -->
 <div class="hero"></div>
 
-<!-- 子メニューエリア -->
-<div id="submenu1" class="submenu-area">
-    <ul class="submenu">
-        <li class="submenu-item" onclick="location.href='/about/project-overview'">プロジェクト概要</li>
-        <li class="submenu-item" onclick="location.href='/about/project-history'">プロジェクトの歩み</li>
-        <li class="submenu-item" onclick="location.href='/about/members'">メンバー</li>
-    </ul>
-</div>
-<div id="submenu2" class="submenu-area">
-    <ul class="submenu">
-        <li class="submenu-item" onclick="location.href='/data/collecting-data'">データを集める</li>
-        <li class="submenu-item" onclick="location.href='/data/download'">データセットのダウンロード</li>
-        <li class="submenu-item" onclick="location.href='/data/python-usage'">Pythonでのデータファイルの使用</li>
-    </ul>
-</div>
-<!-- 他の子メニューも同様に追加 -->
-
 <script>
-    // 子メニュー表示/非表示切り替え
-    function showSubmenu(id) {
-        // 他のすべてのサブメニューを非表示にする
-        document.querySelectorAll('.submenu-area').forEach(function(submenu) {
-            submenu.classList.remove('active');
-        });
-
-        // 対象のサブメニューを表示/非表示にする
-        const targetSubmenu = document.getElementById(id);
-        if (targetSubmenu) {
-            targetSubmenu.classList.add('active');
-        }
-    }
-
-    // クリック以外の方法でメニューを閉じる場合の準備（例: クリックアウト）
-    document.addEventListener('click', function(e) {
-        const isMenuItem = e.target.closest('.menu-item');
-        const isSubmenuArea = e.target.closest('.submenu-area');
-        if (!isMenuItem && !isSubmenuArea) {
-            document.querySelectorAll('.submenu-area').forEach(function(submenu) {
-                submenu.classList.remove('active');
-            });
-        }
-    });
-
     // 言語切り替え
     function changeLanguage(lang) {
         alert(`Language switched to: ${lang}`);
