--- a/index.html
+++ b/index.html
@@ -64,12 +64,12 @@
         .submenu-area {
             display: none; /* 初期状態は非表示 */
             position: absolute;
-            top: 100%; /* ヘッダーのすぐ下に配置 */
+            top: 30px; /* ヘッダーのすぐ下に配置 */
             left: 0;
             width: 100%; /* ヘッダー幅と同じ */
             background-color: #fff; /* 背景白 */
             color: #000; /* 文字黒 */
-            padding: 20px 0;
+            padding: 20px;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
             box-sizing: border-box;
             z-index: 10; /* トップ画像より上に配置 */
